// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beautify 1`] = `
"Error: 
    Object.<anonymous> (packages/error/test/index.js:39:17)"
`;

exports[`beautify with title 1`] = `
"Error: title
    Object.<anonymous> (packages/error/test/index.js:48:17)"
`;

exports[`getStack: -1 1`] = `
"Error: 
    at c (/packages/error/test/index.js:26:16)
    at b (/packages/error/test/index.js:22:10)
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:31:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 0 1`] = `
"Error: 
    at c (/packages/error/test/index.js:26:16)
    at b (/packages/error/test/index.js:22:10)
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:32:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 1 1`] = `
"Error: 
    at c (/packages/error/test/index.js:26:16)
    at b (/packages/error/test/index.js:22:10)
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:33:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 2 1`] = `
"Error: 
    at b (/packages/error/test/index.js:22:10)
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:34:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 3 1`] = `
"Error: 
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:35:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: undefined 1`] = `
"Error: 
    at c (/packages/error/test/index.js:26:16)
    at b (/packages/error/test/index.js:22:10)
    at a (/packages/error/test/index.js:18:10)
    at Object.<anonymous> (/packages/error/test/index.js:30:10)
    at new Promise (<anonymous>)"
`;

exports[`handle just the title fine 1`] = `
"multine
error
message"
`;

exports[`handle multine error message correctly 1`] = `
"Error: multine
error
message
    Object.<anonymous> (packages/error/test/index.js:57:17)"
`;

exports[`keep at least one stack line 1`] = `
"Error: 
    Object.asyncJestTest (../../../AppData/Local/Yarn/Berry/cache/jest-jasmine2-npm-25.1.0-12d6be9238-2.zip/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:100:37)"
`;
